refactor CityRepository and CityRepositoryTest